--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiofiles==0.8.0
-aiogram==3.0.0b3
-aiohttp==3.8.1
+aiogram==3.0.0b5
+aiohttp==3.8.3
 aioredis==2.0.1
 aiosignal==1.2.0
 async-timeout==4.0.2
@@ -9,6 +9,7 @@ attrs==21.4.0
 charset-normalizer==2.1.0
 Deprecated==1.2.13
 frozenlist==1.3.0
+gino==1.0.1
 greenlet==1.1.2
 idna==3.3
 magic-filter==1.0.8
@@ -19,7 +20,8 @@ pydantic==1.9.1
 Pygments==2.12.0
 pyparsing==3.0.9
 redis==4.3.4
-SQLAlchemy==1.4.39
-typing-extensions==4.3.0
+six==1.15.0
+SQLAlchemy==1.3.24
+typing_extensions==4.3.0
 wrapt==1.14.1
 yarl==1.7.2
